chore: working version with cpu leak

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serial-bridge",
+  "name": "legoino-serial-bridge",
   "version": "0.0.0",
   "description": "",
   "main": "lib/index.js",
@@ -12,22 +12,23 @@
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
     "prepublishOnly": "rollup -c",
-    "start": "DEBUG=SerialBridge:* nodemon -r esm src",
+    "start": "nodemon --inspect -r esm example",
+    "start-debug": "DEBUG=SerialBridge:* nodemon -r esm example",
     "test": "npm run test-coverage && npm run eslint",
     "test-coverage": "jest --coverage",
     "test-only": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hackuarium/serial-bridge.git"
+    "url": "git+https://github.com/hackuarium/legoino-serial-bridge.git"
   },
   "keywords": [],
   "author": "Luc Patiny",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hackuarium/serial-bridge/issues"
+    "url": "https://github.com/hackuarium/legoino-serial-bridge/issues"
   },
-  "homepage": "https://github.com/hackuarium/serial-bridge#readme",
+  "homepage": "https://github.com/hackuarium/legoino-serial-bridge#readme",
   "jest": {
     "testEnvironment": "node"
   },
@@ -41,7 +42,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.1",
     "@types/jest": "^25.2.3",
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-cheminfo": "^4.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.13.2",
@@ -49,7 +50,7 @@
     "jest": "^26.0.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "rollup": "^2.11.2"
+    "rollup": "^2.13.1"
   },
   "dependencies": {
     "debug": "^4.1.1",
